--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="https://balkanoche-prison-calculator.vercel.app/">
+    <meta name="twitter:creator" content="@YavaDeus">
+    <meta name="twitter:title" content="Balkanoche Prison Calculator">
+    <meta name="twitter:description" content="Calculez la durée de votre peine de prison grâce à la jurisprudence Balkanoche 2019-2022.">
+    <meta name="twitter:image" content="preview.png">
     <link rel="icon" href="<%= BASE_URL %>prisonner.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
