--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="twitter:creator" content="@YavaDeus">
     <meta name="twitter:title" content="Balkanoche Prison Calculator">
     <meta name="twitter:description" content="Calculez la durée de votre peine de prison grâce à la jurisprudence Balkanoche 2019-2022.">
-    <meta name="twitter:image" content="preview.png">
+    <meta name="twitter:image" content="<%= BASE_URL %>preview.png">
     <link rel="icon" href="<%= BASE_URL %>prisonner.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
